docs/tests/syntax/bad/testfile-bad_octal-1.cpp
int main() { int x = 08; }
